css/master.css
:root {
  --blue-color: #0075ff;
  --blue-alt-color: #0d69d5;
  --orange-color: #f59e0b;
  --green-color: #22c55e;
  --red-color: #f44336;
  --grey-color: #888;
}
* {
  margin: 0px;
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
  outline: none;
  border: none;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
  padding: 0;
}

::-webkit-scrollbar {
  width: 15px;
}

::-webkit-scrollbar-track {
  background-color: white;
}
::-webkit-scrollbar-thumb {
  background-color: var(--blue-color);
}
::-webkit-scrollbar-thumb:hover {
  background-color: var(--blue-alt-color);
}
.content {
  overflow: hidden;
}

.page {
  min-height: 100vh;
  background-color: #f1f5f9;
}

/* Start Sidebar */
.sidebar {
  width: 250px;
  box-shadow: 0 0 10px #ddd;
}

.sidebar > h3::before {
  content: "";
  position: absolute;
  width: 100px;
  height: 3px;
  background-color: black;
  bottom: -20px;
  left: 50%;
  transform: translateX(-50%);
}

.sidebar > h3::after {
  content: "";
  position: absolute;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background-color: black;
  border: 4px solid white;
  left: 50%;
  transform: translateX(-50%);
  bottom: -29px;
}

.sidebar ul li a {
  transition: 0.3s;
}
.sidebar ul li a:hover {
  background-color: #eee;
}

@media (max-width: 767px) {
  .sidebar {
    width: 58px;
    padding: 10px;
  }
  .sidebar > h3 {
    display: flex;
    font-size: 12px;
    margin-bottom: 10px;
    justify-content: center;
  }
  .sidebar > h3::before,
  .sidebar > h3::after {
    display: none;
  }
  .sidebar ul li a i {
    margin: 0;
  }
  .sidebar ul li a span {
    display: none;
  }
  .sidebar ul li a {
    margin-bottom: 5px;
    justify-content: center;
  }
}
/* Start Sidebar */

/* Start Head */
.head .search::before {
  font-family: var(--fa-style-family-classic);
  content: "\f002";
  font-weight: 900;
  position: absolute;
  left: 15px;
  top: 50%;
  transform: translateY(-50%);
  font-size: 14px;
  color: var(--grey-color);
}
.head .search input {
  border: 1px solid #ccc;
  border-radius: 10px;
  margin-left: 5px;
  padding-left: 30px;
  width: 160px;
  transition: width 0.3s;
}

.head input:focus {
  width: 200px;
}
.head input:focus::placeholder {
  opacity: 0;
}

.head .info .notifications {
  cursor: pointer;
}

.head .info .notifications::before {
  content: "";
  position: absolute;
  background-color: var(--red-color);
  height: 10px;
  width: 10px;
  border-radius: 50%;
  right: 5px;
  top: 5px;
}

.head .info img {
  height: 32px;
  width: 32px;
  border-radius: 50%;
}
/* End Head */

/* Start Content */
.content > h1 {
  margin: 20px 20px 40px;
}

.content > h1::before,
.content > h1::after {
  content: "";
  position: absolute;
  bottom: -10px;
  left: 0;
  height: 3px;
}

.content > h1::before {
  background-color: white;
  width: 120px;
}

.content > h1::after {
  background-color: black;
  width: 40px;
}
/* End Content */

.wrapper {
  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
  margin: 0px 20px 20px;
}

@media (max-width: 767px) {
  .wrapper {
    grid-template-columns: minmax(200px, 1fr);
    margin: 0px 10px 20px;
  }
}

/* Start Welcome */
.welcome {
  overflow: hidden;
}

.welcome .welcome-head img {
  width: 200px;
}

@media (max-width: 767px) {
  .welcome .welcome-head {
    padding-bottom: 30px;
  }
}

.welcome .avatar {
  width: 64px;
  border: 4px solid white;
  box-shadow: 0 0 5px #ddd;
  margin: -32px 0px 0px 20px;
  display: block;
}

@media (max-width: 767px) {
  .welcome .avatar {
    margin: -32px auto 0px;
  }
}

.welcome .info {
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
  margin: 20px 0px;
}

.welcome .info div {
  flex: 1;
}

@media (max-width: 767px) {
  .welcome .info div {
    margin-bottom: 20px;
  }
}

.welcome .info div span {
  margin-top: 10px;
}

.welcome button {
  background-color: var(--blue-color);
  color: white;
  margin: 0px 20px 20px auto;
}

.welcome button:hover {
  background-color: var(--blue-alt-color);
}
/* End Welcome */

/* Start Quick Draft */
.quick-draft textarea {
  resize: none;
  height: 180px;
}

.quick-draft button {
  background-color: var(--blue-color);
  color: white;
  margin: 0px 20px 20px auto;
}

.quick-draft button:hover {
  background-color: var(--blue-alt-color);
}
/* Start Quick Draft */

/* Start Yearly Targets */

.yearly-targets .stat .block {
  width: 80px;
  height: 80px;
  font-size: 20px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
}

.yearly-targets .stat .block::before {
  font-family: var(--fa-style-family-classic);
}

.yearly-targets .stat#money .block {
  background-color: rgba(0, 119, 255, 0.2);
}

.yearly-targets .stat#money .block::before {
  content: "\24";
  color: var(--blue-color);
}

.yearly-targets .stat#projects .block {
  background-color: rgba(255, 179, 0, 0.2);
}
.yearly-targets .stat#projects .block::before {
  content: "\f121";
  color: var(--orange-color);
}

.yearly-targets .stat#team .block {
  background-color: rgba(0, 255, 21, 0.2);
}

.yearly-targets .stat#team .block::before {
  content: "\f007";
  color: var(--green-color);
}

.yearly-targets .stat .info {
  flex: 1;
}

.yearly-targets .stat .info .value {
  font-weight: bold;
}

.yearly-targets .stat .info .ratio {
  height: 4px;
}

.yearly-targets .stat .info .ratio span {
  display: block;
  height: 100%;
  position: relative;
}

.yearly-targets .stat .info .ratio span::before {
  content: "";
  width: 0px;
  height: 0px;
  border: 5px solid;
  position: absolute;
  right: 0;
  top: -10px;
  transform: translateX(50%);
}

.yearly-targets .stat#money .info .ratio span::before {
  border-color: var(--blue-color) transparent transparent transparent;
}
.yearly-targets .stat#projects .info .ratio span::before {
  border-color: var(--orange-color) transparent transparent transparent;
}
.yearly-targets .stat#team .info .ratio span::before {
  border-color: var(--green-color) transparent transparent transparent;
}

.yearly-targets .stat .info .ratio span::after {
  position: absolute;
  color: white;
  top: -30px;
  right: 0;
  transform: translateX(50%);
  display: flex;
  justify-content: center;
  align-items: center;
  height: 20px;
  width: 30px;
  border-radius: 4px;
  font-size: 12px;
}
.yearly-targets .stat#money .info .ratio span::after {
  content: "80%";
  background-color: var(--blue-color);
}
.yearly-targets .stat#projects .info .ratio span::after {
  content: "55%";
  background-color: var(--orange-color);
}
.yearly-targets .stat#team .info .ratio span::after {
  content: "75%";
  background-color: var(--green-color);
}

.yearly-targets .stat#money .info .ratio {
  background-color: rgba(0, 119, 255, 0.2);
}

.yearly-targets .stat#money .info .ratio span {
  width: 80%;
}

.yearly-targets .stat#projects .info .ratio {
  background-color: rgba(255, 179, 0, 0.2);
}

.yearly-targets .stat#projects .info .ratio span {
  width: 55%;
}

.yearly-targets .stat#team .info .ratio {
  background-color: rgba(0, 255, 21, 0.2);
}

.yearly-targets .stat#team .info .ratio span {
  width: 75%;
}
/* End Yearly Targets */

/* Start Statisitcs */
.statistics .scores {
  flex-wrap: wrap;
}

.statistics .scores div {
  border: 1px solid var(--grey-color);
  width: calc(50% - 10px);
}

@media (max-width: 767px) {
  .statistics .scores div {
    width: 100%;
  }
}
/* End Statisitcs */

/* Start News */
.news .list .row:not(:last-child) {
  border-bottom: 1px solid #eee;
}

.news .list .row:first-child {
  padding-top: 0;
}

.news .list .row:last-child {
  border: none;
  padding-bottom: 0px;
}

.news .list .row img {
  width: 100px;
}

.news .list .row .time {
  padding: 4px 10px;
}

@media (max-width: 767px) {
  .news .list .row .text {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}
/* End News */

/* Start Tasks */
.tasks .list .row:not(:last-of-type) {
  padding-bottom: 15px;
  margin-bottom: 15px;
  border-bottom: 1px solid #eee;
}

.tasks .list .row .info {
  flex-grow: 1;
}

.tasks .list .row .delete {
  transition: 0.3s;
  cursor: pointer;
}

.tasks .list .row .delete:hover {
  color: var(--orange-color);
}

.tasks .checked {
  opacity: 0.3;
  text-decoration: line-through;
}
/* End Tasks */

/* Start Top-search */
.top-search .list .row:not(:last-of-type) {
  margin-bottom: 30px;
}
.top-search .list .row .num {
  padding: 4px 10px;
}
/* End Top-search */

/* Start Uploads */
.uploads .list .row:not(:last-of-type) {
  border-bottom: 1px solid #eee;
}

.uploads .list .row .info {
  flex-grow: 1;
}
.uploads .list .row img {
  width: 40px;
  height: 40px;
}
/* End Uploads */

/* Start Latest Project */
.latest-project .milestones {
  border-left: 2px solid var(--blue-color);
}
.latest-project .milestones p {
  position: relative;
  padding-left: 25px;
}
.latest-project .milestones p:not(:last-child) {
  margin-bottom: 25px;
}
.latest-project .milestones p::before,
.latest-project .milestones p::after {
  content: "";
  position: absolute;
  left: -1px;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.latest-project .milestones p::before {
  width: 20px;
  height: 20px;
  background-color: white;
  border: 2px solid var(--blue-color);
}

.latest-project .milestones p.done::after,
.latest-project .milestones p.pending::after {
  position: absolute;
  width: 16px;
  height: 16px;
}

.latest-project .milestones p.done::after {
  background-color: var(--blue-color);
}

.latest-project .milestones p.pending::after {
  background-color: #fff;
  animation-name: toggle;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
}

@keyframes toggle {
  0% {
    background-color: #fff;
  }
  40% {
    background-color: var(--blue-color);
  }
  100% {
    background-color: #fff;
  }
}
.latest-project .rocket {
  width: 160px;
  height: 150px;
  opacity: 0.1;
  right: 0;
  bottom: 0;
}
/* End Latest Project */

/* Start Reminders */
.reminders .list .info {
  border-left-width: 2px;
  border-left-style: solid;
}

.reminders .list .dot {
  width: 15px;
  height: 15px;
}
/* End Reminders */
/* Start  Post */
.post .content .head img {
  width: 48px;
  height: 48px;
}

.post .content .head,
.post .content .body {
  border-bottom: 1px solid #eee;
}
.post .content .body {
  line-height: 2;
}
/* End  Post */

/* Start Social Media*/
.social-media .links .row {
  flex-grow: 1;
}

.social-media .links .row .box {
  width: 56px;
  height: 56px;
}

.social-media .links .row .info p {
  flex-grow: 1;
}

.social-media .links .row.twitter {
  background-color: rgb(29 161 242 / 20%);
  color: #1da1f2;
}
.social-media .links .row.facebook {
  background-color: rgb(24 119 242 / 20%);
  color: #1da1f2;
}
.social-media .links .row.youtube {
  background-color: rgb(255 0 0 / 20%);
  color: #ff0000;
}
.social-media .links .row.linkedin {
  background-color: rgb(0 119 181 / 20%);
  color: #0077b5;
}

.social-media .links .row.twitter .box,
.social-media .links .row.twitter a {
  background-color: #1da1f2;
}
.social-media .links .row.facebook .box,
.social-media .links .row.facebook a {
  background-color: #1877f2;
}
.social-media .links .row.youtube .box,
.social-media .links .row.youtube a {
  background-color: #ff0000;
}
.social-media .links .row.linkedin .box,
.social-media .links .row.linkedin a {
  background-color: #0077b5;
}

/* End Social Media*/

/* Start projects table */
.projects table {
  min-width: 1000px;
  border-spacing: 0px;
  overflow-x: auto;
}
.projects table th {
  text-align: start;
  padding: 15px;
  background-color: #eee;
}
.projects table td {
  padding: 15px;
  border-bottom: 1px solid #eee;
  border-left: 1px solid #eee;
  transition: 0.3s;
}

.projects table tr:hover td {
  background-color: #faf7f7;
}

.projects table td:last-child {
  border-right: 1px solid #eee;
}

.projects table td img {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  background-color: white;
  padding: 2px;
}

.projects table td img:not(:first-child) {
  margin-left: -20px;
}

